RESOLVED FIXED126415
IconController.cpp needs to include <wtf/text/CString.h>
https://bugs.webkit.org/show_bug.cgi?id=126415
Summary IconController.cpp needs to include <wtf/text/CString.h>
Jaehun Lim
Reported 2014-01-02 20:34:15 PST
Build fails in IconController.cpp when ICONDATABASE is disabled. WebKit/Source/WebCore/loader/icon/IconController.cpp:124:110: error: invalid use of incomplete type ‘class WTF::CString’ IconController.cpp needs #include <wtf/text/CString.h>.
Attachments
Patch (1.41 KB, patch)
2014-01-02 20:38 PST, Jaehun Lim
no flags
Jaehun Lim
Comment 1 2014-01-02 20:38:26 PST
WebKit Commit Bot
Comment 2 2014-01-02 21:18:10 PST
Comment on attachment 220278 [details] Patch Clearing flags on attachment: 220278 Committed r161252: <http://trac.webkit.org/changeset/161252>
WebKit Commit Bot
Comment 3 2014-01-02 21:18:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.