IconController.cpp needs to include <wtf/text/CString.h> https://bugs.webkit.org/show_bug.cgi?id=126415

Reviewed by Gyuyoung Kim.

Build fails in IconController.cpp when ICONDATABASE is disabled.
WebKit/Source/WebCore/loader/icon/IconController.cpp:124:110: error: invalid use of incomplete type ‘class WTF::CString’
IconController.cpp needs #include <wtf/text/CString.h>.

No new tests. Just build fix.

* loader/icon/IconController.cpp: Add #include statement.


Canonical link: https://commits.webkit.org/144323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161252 268f45cc-cd09-0410-ab3c-d52691b4dbfc